[package]
name = "three-admissibility"
version = "0.1.0"
edition = "2024"

[dependencies]
graphbench = { git="https://github.com/microgravitas/graphbench" }
flate2 = "1.0.22"
mwmatching = "0.1.1"
hopcroft-karp = "0.2.0"
clap = { version = "4.5.26", features = ["derive"] }
csv = "1.1"
serde = { version = "1.0.145", features = ["derive"] }
peak_alloc = "0.2.1"

[dev-dependencies]
rand = "0.8.5"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
